Added Sun - Moon Icon  (#6)
* Add dark mode

* Added Sun-Moon icon and bit of Responsiveness

* Added myName as a Contributor and Updated the sun-moon icons

* Some Changes to make it look more neat

Co-authored-by: Abhay Nikam <nikam.abhay1@gmail.com>

--- a/src/style.scss
+++ b/src/style.scss
@@ -64,6 +64,8 @@
   --color-accent: #d1dce5;
   --color-background: #fefcf8;
   --color-link: #3e8ec8;
+  --color-bg-highlight: #f3efe5;
+
 }
 
 /* HTML elements */
@@ -82,12 +84,26 @@ html {
 }
 
 body {
+  --color-background: #fefcf8;
+
   font-family: var(--font-body);
   font-size: var(--fontSize-2);
   font-weight: var(--fontWeight-medium);
   color: var(--color-text);
   background-color: var(--color-background);
+  transition: all 1s ease 0s;
 }
+
+body.dark {
+  -webkit-font-smoothing: antialiased;
+
+  --color-background: #1a2c3d;
+  --color-text: #fefcf8;
+  --color-text-light: #d1dce5;
+  --color-heading-black: #ea4444;
+  --color-heading: #ea4444;
+}
+
 
 footer {
   font-size: var(--fontSize-1);
@@ -362,6 +378,17 @@ a:focus {
 .gatsby-highlight {
   margin-bottom: var(--spacing-8);
   font-size: 1rem !important;
+
+  pre {
+    background-color: var(--color-bg-highlight) !important;
+  }
+}
+
+.language-text {
+  padding-left: 10px !important;
+  padding-right: 10px !important;
+  font-size: 16px !important;
+  background-color: var(--color-bg-highlight) !important;
 }
 
 /* Media queries */
@@ -439,7 +466,7 @@ a:focus {
       white-space: nowrap;
       overflow: hidden;
       text-overflow: ellipsis;
-    } 
+    }
   }
 }
 
@@ -458,10 +485,10 @@ a:focus {
   width: 20px;
   height: 20px;
   stroke-width: 0;
-  stroke: currentColor;
+  stroke: var(--color-text);
+  fill: var(--color-text);
   font-style: normal;
   font-weight: normal;
-  speak: none;
   margin-right: .2em;
   text-align: center;
   font-variant: normal;
@@ -492,18 +519,26 @@ a:focus {
     text-align: center;
   }
   }
+  .header-link-home{
+    width: 70%;
+    text-align: left;
+  }
   .main-heading{
-    width: 80%;
+    width: 70%;
     text-align: left;
   }
   .header-nav-link{
-    width: 20%;
+    width: 15%;
     text-align: right;
+  }
+  .container{
+    align-items: flex-start;
+    width: 15%;
   }
 }
 
 @media (min-width: 801px) {
-  
+
   .title {
     width: 80%;
     text-align: left;
@@ -514,16 +549,21 @@ a:focus {
     text-align: right;
   }
   .header-link-home, .main-heading{
-    width: 80%;
+    width: 75%;
     text-align: left;
   }
   .header-nav-link{
-    width: 20%;
+    width: 15%;
     text-align: right;
+  }
+  .container{
+    
+    align-items: flex-end;
+    width: 10%;
   }
 }
 
-@media (max-width: 315px) {
+@media (max-width: 350px) {
   .global-header
   {
     flex-direction: column;
@@ -536,4 +576,42 @@ a:focus {
     text-align: center;
     width: 100%;
   }
+  .toggle-button{
+    margin-top: 5px;  
+    margin-bottom: 10px;
+    width: 100%;
+    text-align: center;
+  }
+  .container{
+    align-items: center;
+    width: 100%;
+    margin-bottom:4px ;
+  }
+  
+}
+
+.toggle-button {
+  width: 100%;
+  height: 30px;
+  border: medium none;
+  background: transparent none repeat scroll 0% 0%;
+  align-self: center;
+  cursor: pointer;
+  margin-bottom:4px ;
+
+}
+
+.sun-moon:hover{
+  opacity: 1;
+}
+
+.sun-moon{
+  height: 30px;
+  opacity: 0.5;
+  width: 100%;
+  
+}
+.container{
+  display: flex;
+ 
 }
